--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kamil Mastalerz",
+  "name": "Personal website",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "gamer32.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "gamer125.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "125x125"
     },
     {
-      "src": "logo512.png",
+      "src": "gamer512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
